--- a/gb/10/11/16/n3086307.md
+++ b/gb/10/11/16/n3086307.md
@@ -1,66 +1,54 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>刘兴钦乔迁图  媲美清明上河图</h2>
-
 <h6></h6>
 <hr>
 <p>【大纪元11月16日报导】（中央社记者魏纭铃台北16日电）今年获首届金漫奖终身成就奖的漫画家刘兴钦，决定将其珍贵的 180件台湾民俗画作原稿，寄藏于台湾历史博物馆。客委会主委黄玉振说，其作品乔迁图可喻为台版清明上河图。</p>
 <p>台湾本土漫画家刘兴钦的漫画作品，曾陪伴过台湾民国40年至70年出生的人走过童年，其漫画人物“阿三哥”生性活泼，是画他自己；“大婶婆”则是以他母亲为形象的传统客家妇女。</p>
 <p>77岁的刘兴钦身体硬朗，笑口常开，他决定将珍贵的180幅台湾民俗画作原稿，寄藏于台湾历史博物馆。他今天举行记者会说，曾因向往美国而在国外居住一段时间，“1个人不离开家乡，永远不觉得家乡的美好。”在美国心生以图像记录小时候回忆的想法，之后他便致力“台湾民俗纪录”画作。</p>
 <p>其中“乔迁图”图幅长750公分，宽42.4公分，图卷头至卷尾描述屋主率领长列队伍搬迁，携带古早家当、器皿、农耕用具等，描绘台湾古早味。刘兴钦说，会更努力画下去，直到不能画为止。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%96%87%E5%BB%BA%E4%BC%9A.md#1">文建会</a>主委盛治仁和黄玉振说，自己从小看刘兴钦的漫画长大。黄玉振认为，刘兴钦笔下的大婶婆是客家传统妇女具勤劳善良的美德代表。他透露，明年会将“大婶婆节”列为客庄12大节庆之一。</p>
+<p>文建会主委盛治仁和黄玉振说，自己从小看刘兴钦的漫画长大。黄玉振认为，刘兴钦笔下的大婶婆是客家传统妇女具勤劳善良的美德代表。他透露，明年会将“大婶婆节”列为客庄12大节庆之一。</p>
 <p>黄玉振说，刘兴钦不仅是客家之宝，更是台湾之宝，他所绘的“乔迁图”代表台湾真正的庶民文化，可以喻为台湾版的清明上河图。</p>
 <p>(据中广新闻报导)漫画“大婶婆与阿三哥”陪伴许多人度过童年时光，作者刘兴钦荣获金漫奖的“终身成就奖”，近十年来他致力创作台湾民俗画作，他也决定把珍贵民俗画作180原件，寄藏在台湾历史博物馆，作为研究、展示和推广教育的重要资料。(陈映竹报导)</p>
 <p>提到刘兴钦的漫画，大家一定会想到大婶婆这个脍炙人口的角色，阿三哥与大婶婆的塑像，成了内湾的注册商标。他所画的农村先民民俗画作，为昔日台湾社会生活作缩影纪录，刘兴钦的画作原件，将寄藏在台湾历史博物馆。</p>
 <p>刘兴钦出生在新竹县横山乡，童年的他和其他乡下穷苦孩子一样，放牛、抓鱼虾，他说，很很庆幸生在贫穷，事事需要自己亲手作、养成他随时观察纪录的习惯。“富有家庭怎么会去开矿、阉鸡、阉猪、拉木马，我很庆幸很穷必须作这种工作！”</p>
 <p>近十年来，刘兴钦改变风格，不同于以往的漫画作品，用宣纸水墨画风，画出三百幅画作，有台湾早期的生活影像、民俗风情、童年记忆等，他表示，创作台湾民俗画作已经是他的使命，有生之年会继续画下去。	</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/9/15/n3025839.md#1">当我们童在艺起～文建会2010地方文化暨表演艺术校园巡回展演</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/9/16/n3027052.md#1">文建会艺文飨宴   18日上午9时起开放索票</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/9/24/n3034540.md#1">台文建会基层巡演  苗栗开跑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/9/30/n3040760.md#1">霹雳损失上亿　台文建会提补助</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/10/21/n3061085.md#1">台文建会艺文部落格征选图文网志</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/11/1/n3071500.md#1">台文建会：噪音未解决　北音中心预算拟冻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/28/n13917279.md#1">【还原真相】抓捕传闻纷扰 江泽民嫡孙能躲过大劫吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/25/n13891796.md#1">【时事人物】亦真亦幻 揭开圣诞老人真假之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/4/11/n13708669.md#1">【未解之谜】不愿拿枪的战争英雄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/7/n13422320.md#1">雕刻大师的旅程——从苏联被迫害到自由的美国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/9/15/n3025839.md#1">当我们童在艺起～文建会2010地方文化暨表演艺术校园巡回展演</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/9/16/n3027052.md#1">文建会艺文飨宴   18日上午9时起开放索票</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/9/24/n3034540.md#1">台文建会基层巡演  苗栗开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/9/30/n3040760.md#1">霹雳损失上亿　台文建会提补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/10/21/n3061085.md#1">台文建会艺文部落格征选图文网志</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/1/n3071500.md#1">台文建会：噪音未解决　北音中心预算拟冻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/20/n14274001.md#1">《匠人魂》记录黑糖制糖师 找回台湾甜蜜记忆</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/1/n14262140.md#1">享寿105岁高龄 追忆道风山绘瓷元老徐淼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/11/n14246475.md#1">加拿大摄影师：灵感和智慧源自纯洁的心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/26/n14234715.md#1">甘做大海的儿子 香港最南岛屿“岛主”的渔民人生</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/10/n10207223.md#1" target="_blank">共产暴政录：儿子告发母亲致其母被处决</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/18/n8113015.md#1" target="_blank">融入东方智慧 西人健康顾问获提振</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/25/n10590053.md#1" target="_blank">烧杀抢如何成为中共土地革命的“初心”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11489139.md#1" target="_blank">组图一：法轮功学员欧洲盛大游行 震撼世人</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13953285.md#1">独家：“神的指引” 中领馆员工成功出逃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13950568.md#1">明末改朝换代关帝君显灵  天命不可违人算不如天算</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954628.md#1">【百年真相】晚年街头乞讨 大师叶企孙往事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/15/n13951097.md#1">【百年真相】30岁自尽 钢琴家顾圣婴悲歌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952758.md#1">【未解之谜】别找了 外星人早来地球了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957046.md#1">【神韵早期节目】儒生抒怀（2015年制作）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957490.md#1">【全球新闻】大陆极端天气频传 特大冰雹砸伤人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957036.md#1">【中国禁闻】习访俄得失大盘点 中国民企前景难料</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13956211.md#1">习近平临走时对普京说了句啥？媒体人解读</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955727.md#1">习近平访俄有异常细节 专家：普京话中有话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955924.md#1">“新冠没有消失” 张文宏谈下一轮疫情</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955715.md#1">艾成离世7个月 40岁胞弟艾翔心肌梗塞离世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955990.md#1">刘真离世三周年 辛龙发41秒片再度缅怀亡妻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/21/n13955475.md#1">消失一年半 赵薇被拍到手持身份证现身机场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13956278.md#1">孙俪自曝将进组拍戏 得意一对儿女为她做美食</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13956249.md#1">遭遇对撞车祸后首露面 陈慧琳眉头现疤痕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13948030.md#1">为何每天喝3杯这种茶 可以逆转衰老3年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/20/n13954459.md#1">樱桃抗癌减肥、治痛风  但吃时要注意1件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955685.md#1">晒太阳更致癌还是更抗癌？这样晒太阳才安全</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950056.md#1">60岁创业不算晚 9种适合退休族的行业</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/2/n13941432.md#1">适合女性的“168间歇性断食” 6周可见效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271929.md#1">大预言家的“末世预言”（上）：指向什么出路？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277524.md#1">她的过去和现在：用舞蹈完成父亲遗愿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/21/n14274439.md#1">【未解之谜】二战上校转世 他的话救了今生的父亲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/17/n14271930.md#1">大预言家的“末世预言”（下）：古今妙合共振！</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277971.md#1">【马克时空】美防空导弹先给乌克兰 韩国或援乌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14278019.md#1">【菁英论坛】水库之殇 中国人头顶“核弹”？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277381.md#1">【秦鹏观察】美新法案3大特点 直击中共死穴</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276835.md#1">三中全会政治高于经济 分析：中共全线告急</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276527.md#1">为逃离中国 三十多岁女性选择“大龄留学”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277312.md#1">美国众议院通过《法轮功保护法案》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276420.md#1">任嘉伦官宣解约A股上市公司 消息登热搜榜首</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276867.md#1">史嘉蕾兴奋主演《侏罗纪4》 愿意被任何东西吃掉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276922.md#1">颂乐高雄开唱说想留在台湾 献唱张惠妹歌曲</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14277240.md#1">成龙代言的防毒软件卡巴斯基遭美国禁售</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/24/n14276549.md#1">那英《歌手5》排名垫底 网友错愕 疑是“剧本”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277656.md#1">安宁病房护士经验谈：临终者最惊人的3件事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/25/n14276883.md#1">咖喱饭酱汁该放左边或右边？ 日本网友投票</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/10/n14267943.md#1">“水果之王”榴梿药用价值高 吃后这样去异味</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/18/n14272340.md#1">造成人体不舒服、生病的六种邪气（上）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/26/n14277393.md#1">婚姻陷入低潮 看韩剧翻转婚姻奇迹的启示</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/11/16/n3086307.htm">刘兴钦乔迁图  媲美清明上河图</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/10/11/16/n3086307.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/10/11/16/n3086307.htm">刘兴钦乔迁图  媲美清明上河图</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/10/11/16/n3086307.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
